# Wiresprite

./: CNAME  README.md  requirements.txt
.github/workflows/: ci.yml  pages.yml  release.yml
app/: __init__.py  snmp_monitor.py
app/static/: style.css
app/templates/: index.html
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cpp/config/: snmpmon.ini.example  wiresprite.ini.example
cpp/src/: core_placeholder.cpp  main.cpp
cpp/src/auth/: auth.cpp  auth.hpp
cpp/src/config/: config.cpp  config.hpp
cpp/src/http/: json_writer.cpp  json_writer.hpp  routes_auth.cpp  routes_auth.hpp  routes_config.cpp  routes_config.hpp  routes_metrics.cpp  routes_metrics.hpp  routes_status.cpp  routes_status.hpp  server.cpp  server.hpp  web_assets.cpp  web_assets.hpp
cpp/src/platform/: open_browser.cpp  open_browser.hpp
cpp/src/poll/: device_state.cpp  device_state.hpp  history_store.cpp  history_store.hpp  if_table.cpp  if_table.hpp  mac_table.cpp  mac_table.hpp  poller.cpp  poller.hpp  sse_hub.cpp  sse_hub.hpp
cpp/src/snmp/: ber.cpp  ber.hpp  client.cpp  client.hpp  oid.cpp  oid.hpp  pdu.cpp  pdu.hpp  udp_socket.cpp  udp_socket.hpp
cpp/tests/: CMakeLists.txt  fake_snmp_agent.hpp  test_auth.cpp  test_ber.cpp  test_client_loopback.cpp  test_config.cpp  test_device_state.cpp  test_history_store.cpp  test_http_server.cpp  test_if_table.cpp  test_json_writer.cpp  test_mac_table.cpp  test_oid.cpp  test_poller_loopback.cpp  test_routes_auth.cpp  test_routes_config.cpp  test_routes_metrics.cpp  test_routes_status.cpp  test_sse_hub.cpp  test_walk_loopback.cpp
docs/: app.js  index.html  style.css
packaging/: README.md  wiresprite.service
